# DytServer

./: .clang-format  CMakeLists.txt  Readmd.md  main.cpp  text.html  vcpkg.json
3rd/dyt_chat/: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
3rd/dyt_chat/include/: core.h  dyt_chat.h  g_struct.h  send_struct.h
3rd/dyt_chat/src/: dyt_chat.cpp
3rd/dyt_chat/src/core/: data_handler.cpp  data_handler_impl.h  parse_recv_data.cpp  receive_struct.h  send_struct_handler.cpp  send_struct_impl.h
3rd/dyt_chat/test/: main.cpp
3rd/nlohmann/: json.hpp
3rd/qmultimedia/include/: multi_media_player.h  multi_media_record.h  qj_struct.h  qmultimedia.h
include/: ChatAddition.h  ChatOrder.h  ChatVideo.h  DeviceChat.h  DeviceChatList.hpp  ServerMain.h  ServerTools.hpp
src/: ChatAddition.cpp  ChatOrder.cpp  ChatVideo.cpp  DeviceChat.cpp  ServerMain.cpp
